Fix error sendFileForbidden

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="container">
-    <h1>Node.js + Socket.io + Redis + OpenLayers + Real Time Tracking </h1>
+    <h1>Real Time Tracking Example</h1>
     <div id="map">
     </div>
   </div>
