--- a/public/publisher.html
+++ b/public/publisher.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
     <title>Node.js + Socket.io + Redis + OpenLayers + Real Time Tracking </title>
     <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <div class="container">
         <h1>Node.js + Socket.io + Redis + OpenLayers + Real Time Tracking </h1>
         <div id="map">
-            <!-- Your map will be shown inside this div-->
+
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"
+        integrity="sha512-v8ng/uGxkge3d1IJuEo6dJP8JViyvms0cly9pnbfRxT6/31c3dRWxIiwGnMSWwZjHKOuY3EVmijs7k1jz/9bLA=="
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/publish.js" type="text/javascript"></script>
 </body>
 
