--- a/public/publisher.html
+++ b/public/publisher.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Node.js + Socket.io + Redis + OpenLayers + Real Time Tracking </title>
-    <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
+    <title>Real Time Tracking (Publisher Location)</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Node.js + Socket.io + Redis + OpenLayers + Real Time Tracking </h1>
+        <h1>Real Time Tracking (Publisher Location)</h1>
         <div id="map">
 
         </div>
